--- a/fcp-0100.md
+++ b/fcp-0100.md
@@ -17,10 +17,10 @@ A new MACHINE_ARCH for the armv7 machines is needed. While one can
 support armv6 and armv7 in one architecture, it creates a lot of
 unnecessary friction.
 
-While it initially felt like similar to the difference between i486
+While the migration initially felt similar to the difference between i486
 and i586, the number of changes required to make this happen are
 larger, especially in ports. Linux has agressively adopted armv7 for
-it's configuration, so having our uname -p match Linux will make the
+its configuration, so having our uname -p match Linux will make the
 ports easier to adopt.
 
 ## Changes to the system
@@ -29,17 +29,17 @@ ports easier to adopt.
 
 * Change the build infrastructure to accept armv7 as a valid target.
 * Change the build infrastructure to generate code optimized for armv7 target.
-* Change the build infrastructure to have the same speical cases for armv7 that we have for armv6.
+* Change the build infrastructure to have the same special cases for armv7 that we have for armv6.
 
 ### Kernel Changes
 * Have all the kernels, except RPI-B, use armv7 as the target arch, so uname -p returns the right name.
-* Rename RPI-B to GENERICv6 since it is the only
+* Rename RPI-B to GENERICv6 since it is the only armv6 kernel.
 * armv7 and armv6 binaries look pretty close to the same, so we'll need some way to not run armv7 binaries on an armv6 kernels.
 
 ### Ports Changes
-* All ports that have tried to shoe-horn in the current infrasture need to be examined and likely modified.
-* Ports exp run will need to be run for both armv6 and the new armv7
-* Package infrastructure will need to grow armv7 support
+* All ports that have tried to shoe-horn in the current infrastructure need to be examined and likely modified.
+* Ports exp-run will need to be run for both armv6 and the new armv7.
+* Package infrastructure will need to grow armv7 support.
 
 ### Handbook Changes
 * Need to change
@@ -55,11 +55,11 @@ ports easier to adopt.
 
 ### Interfaces
 
-Currently, many things are based on the machine processor being amrv6. Those would need to be audited and change. There will be customer visitible downstream changes needed.
+Currently, many things are based on the machine processor being armv6. Those would need to be audited and changed. There will be customer visible downstream changes needed.
 
 ### Upgrade
 
-We'll need some way to support upgrades on either side the integration into the tree.
+We'll need some way to support upgrades on either side of the integration into the tree.
 
 ### Packages
 
